<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:paddingStart="33dp"
    android:paddingEnd="28dp">

    <TextView
        android:id="@+id/autocomplete_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/autocomplete_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="48dp"
        android:minHeight="48dp" />
</LinearLayout>
